fix; wrap the text

--- a/docs/main.css
+++ b/docs/main.css
@@ -73,7 +73,7 @@ body {
   flex-grow: 1;
   font-family: monospace;
   font-size: 14px;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 ::-webkit-input-placeholder, ::placeholder {
